--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis magni
-      tenetur autem culpa quisquam labore rem dolorem reprehenderit quaerat
-      itaque? Nemo accusamus et aliquid, ad libero officiis nam natus pariatur.
-    </p>
+    <div style="display:flex">
+      <button style="flex-direction:row" id="auth">authenticate</button>
+      <button style="flex-direction:row" id="loot">gimme da loot</button>
+    </div>
   </body>
 </html>
